--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,22 @@ proguard/
 *.ipr
 *.iws
 .idea/
+
+.gradle
+/local.properties
+/.idea/workspace.xml
+.DS_Store
+
+
+# Android Studio
+.idea/
+.gradle
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
