--- a/soundsofnature/build.gradle
+++ b/soundsofnature/build.gradle
@@ -18,9 +18,35 @@ android {
     }
 }
 
+sourceSets {
+    unitTest {
+        java.srcDir file('src/test/java')
+        resources.srcDir file('src/test/res')
+    }
+}
+
+configurations {
+    unitTestCompile.extendsFrom runtime
+    unitTestRuntime.extendsFrom unitTestCompile
+}
+
 dependencies {
+    repositories {
+        mavenCentral()
+    }
     compile 'com.android.support:support-v4:19.0.1'
     compile 'com.android.support:appcompat-v7:19.0.1'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.loopj.android:android-async-http:1.4.4@jar'
+
+    unitTestCompile  files("$project.buildDir/classes/release")
+    unitTestCompile  'junit:junit:4.10'
+    unitTestCompile  'org.robolectric:robolectric:2.1.+'
+    unitTestCompile  'com.google.android:android:4.0.1.2'
 }
+
+task unitTest(type:Test, dependsOn: assemble) {
+    testClassesDir = project.sourceSets.unitTest.output.classesDir
+    classpath = project.sourceSets.unitTest.runtimeClasspath
+}
+check.dependsOn unitTest
