--- a/soundsofnature/src/main/AndroidManifest.xml
+++ b/soundsofnature/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <service android:name=".service.CommandExecutorService"/>
     </application>
 
 </manifest>
