--- a/soundsofnature/src/main/AndroidManifest.xml
+++ b/soundsofnature/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="ru.eternalkaif.soundsofnature" >
 
     <application
-        android:name=".BaseApplication"
+        android:name="ru.eternalkaif.soundsofnature.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -29,7 +29,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
-        <service android:name=".service.CommandExecutorService"/>
+
+        <service android:name="ru.eternalkaif.soundsofnature.service.CommandExecutorService" />
+
+        <provider
+            android:name="ru.eternalkaif.soundsofnature.db.SoundsProvider"
+            android:authorities="ru.eternalkaif.db.Sounds"
+            android:enabled="true"
+            android:exported="false" >
+        </provider>
     </application>
 
 </manifest>
